# huard-app-legal

./: achats.html  annuaire.html  bons-intervention.html  bulletins.html  chantiers.html  conges.html  documents.html  index.html  intranet.css  intranet.html  intranet.js  maintenance.html  notes-de-frais.html  pointage.html  privacy-bot.html  privacy-policy.html  rh.html  stock.html  support-it.html  ticket-it.html
commercial-aides-energie/: Aides-Primes-Energie-HUARD-2026.pptx  Aides-Primes-Energie-HUARD-2026.xlsx  build_pptx.py  build_xlsx.py
huard-ai-assistant/: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
huard-ai-assistant/knowledge/faq/: _PLACEHOLDER.md
huard-ai-assistant/knowledge/general/: perimetre.md  ton_et_style.md
huard-ai-assistant/knowledge/procedures/: _PLACEHOLDER.md
huard-ai-assistant/knowledge/templates/: signature_email.md
huard-ai-assistant/src/: config.py  main.py
huard-ai-assistant/src/channels/: outlook.py  whatsapp_twilio.py
huard-ai-assistant/src/core/: claude_client.py  conversation.py  knowledge_base.py
huard-ai-assistant/tests/: test_knowledge_base.py
